# cpp-template

./: CMakeLists.txt  README.md
include/: ProjectConfig.hpp.in
lib/: CMakeLists.txt
src/: main.cpp
